# BIM

./: CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt  database_client_1.db  database_client_2.db  database_client_3.db  main.cpp
Client/Design/: accueil.cpp  accueil.h  connexion.cpp  connexion.h  crea.cpp  crea.h  include.h  info_compt.cpp  main.cpp  main.h  test.cpp  virement.cpp  virement.h
Serveur/: CMakeLists.txt  database_serveur.db  main.cpp
Serveur/Design/: banque.cpp  banque.h
classes/: Client.cpp  Client.h  Compte.h
classes/database/: DB.h
classes/helpers/: Client.h
classes/json/: json.h
classes/socket/: Client.h  Connection.h  Message.h  Server.h
lib/Boost/lib/: libboost_atomic-vc143-mt-s-x64-1_80.lib  libboost_chrono-vc143-mt-s-x64-1_80.lib  libboost_container-vc143-mt-s-x64-1_80.lib  libboost_context-vc143-mt-s-x64-1_80.lib  libboost_contract-vc143-mt-s-x64-1_80.lib  libboost_coroutine-vc143-mt-s-x64-1_80.lib  libboost_date_time-vc143-mt-s-x64-1_80.lib  libboost_exception-vc143-mt-s-x64-1_80.lib  libboost_fiber-vc143-mt-s-x64-1_80.lib  libboost_filesystem-vc143-mt-s-x64-1_80.lib  libboost_graph-vc143-mt-s-x64-1_80.lib  libboost_iostreams-vc143-mt-s-x64-1_80.lib  libboost_json-vc143-mt-s-x64-1_80.lib  libboost_math_c99-vc143-mt-s-x64-1_80.lib  libboost_math_c99f-vc143-mt-s-x64-1_80.lib  libboost_math_c99l-vc143-mt-s-x64-1_80.lib  libboost_math_tr1-vc143-mt-s-x64-1_80.lib  libboost_math_tr1f-vc143-mt-s-x64-1_80.lib  libboost_math_tr1l-vc143-mt-s-x64-1_80.lib  libboost_nowide-vc143-mt-s-x64-1_80.lib  libboost_prg_exec_monitor-vc143-mt-s-x64-1_80.lib  libboost_program_options-vc143-mt-s-x64-1_80.lib  libboost_random-vc143-mt-s-x64-1_80.lib  libboost_regex-vc143-mt-s-x64-1_80.lib  libboost_stacktrace_noop-vc143-mt-s-x64-1_80.lib  libboost_stacktrace_windbg-vc143-mt-s-x64-1_80.lib  libboost_stacktrace_windbg_cached-vc143-mt-s-x64-1_80.lib  libboost_system-vc143-mt-s-x64-1_80.lib  libboost_thread-vc143-mt-s-x64-1_80.lib  libboost_timer-vc143-mt-s-x64-1_80.lib  libboost_type_erasure-vc143-mt-s-x64-1_80.lib  libboost_wserialization-vc143-mt-s-x64-1_80.lib
var/cache/fontconfig/: 04aabc0a78ac019cf9454389977116d2-le64.cache-8  089dead882dea3570ffc31a9898cfb69-le64.cache-8  (+68 more)
(+80 files in other folders)
